# JwtRestApiFlask

./: .env  Dockerfile  Readme.md  __init.py  __init__.py  __main__.py  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
Api/: auth.py  queue.py
Services/: auth.py  queue.py
Tests/: conftest.py
Tests/integration_tests/api/: integration_test_api.py  mock_variables.py
Tests/unit_tests/test_api/: mock_variables.py  test_api_queue.py
Tests/unit_tests/test_service/: test_service_queue.py
Utils/: PYTHON.postman_collection.json  function_jwt.py
Utils/resourses/: PYTHON.postman_collection.json
app/: __init__.py  __main__.py
routes/: auth.py  redis_endpoint.py
tests/: __init__.py  conftest.py  mock_variables.py  test_redis.py  test_routes.py
unit tests/: ping_test.py
